// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applyAggregateFilter — bigquery > distributes a predicate across a compound measure 1`] = `"sum(CASE WHEN order_date >= '2024-01-01' THEN sales END) / nullif(sum(CASE WHEN order_date >= '2024-01-01' THEN quantity END), 0)"`;

exports[`applyAggregateFilter — clickhouse > distributes a predicate across a compound measure 1`] = `"sum(sales) FILTER (WHERE order_date >= '2024-01-01') / nullif(sum(quantity) FILTER (WHERE order_date >= '2024-01-01'), 0)"`;

exports[`applyAggregateFilter — cube > distributes a predicate across a compound measure 1`] = `"sum(sales) FILTER (WHERE order_date >= '2024-01-01') / nullif(sum(quantity) FILTER (WHERE order_date >= '2024-01-01'), 0)"`;

exports[`applyAggregateFilter — databricks > distributes a predicate across a compound measure 1`] = `"sum(sales) FILTER (WHERE order_date >= '2024-01-01') / nullif(sum(quantity) FILTER (WHERE order_date >= '2024-01-01'), 0)"`;

exports[`applyAggregateFilter — fabric > distributes a predicate across a compound measure 1`] = `"sum(CASE WHEN order_date >= '2024-01-01' THEN sales END) / nullif(sum(CASE WHEN order_date >= '2024-01-01' THEN quantity END), 0)"`;

exports[`applyAggregateFilter — motherduck > distributes a predicate across a compound measure 1`] = `"sum(sales) FILTER (WHERE order_date >= '2024-01-01') / nullif(sum(quantity) FILTER (WHERE order_date >= '2024-01-01'), 0)"`;

exports[`applyAggregateFilter — postgres > distributes a predicate across a compound measure 1`] = `"sum(sales) FILTER (WHERE order_date >= '2024-01-01') / nullif(sum(quantity) FILTER (WHERE order_date >= '2024-01-01'), 0)"`;

exports[`applyAggregateFilter — snowflake > distributes a predicate across a compound measure 1`] = `"sum(CASE WHEN order_date >= '2024-01-01' THEN sales END) / nullif(sum(CASE WHEN order_date >= '2024-01-01' THEN quantity END), 0)"`;

exports[`generateSQLQuery with filters — bigquery > routes column-bound filter predicates into the WHERE clause 1`] = `
"SELECT category AS \`category\`, sum(sales) AS \`sum_sales\`
 FROM orders
 WHERE (category='O\\'Brien' AND region IN ('East', 'West'))
		GROUP BY ALL
		
		
		ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery with filters — clickhouse > routes column-bound filter predicates into the WHERE clause 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 WHERE (category='O\\'Brien' AND region IN ('East', 'West'))
		GROUP BY ALL
		
		
		ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery with filters — cube > routes column-bound filter predicates into the WHERE clause 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 WHERE (category='O''Brien' AND region IN ('East', 'West'))
 GROUP BY category
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery with filters — databricks > routes column-bound filter predicates into the WHERE clause 1`] = `
"SELECT category AS \`category\`, sum(sales) AS \`sum_sales\`
 FROM orders
 WHERE (category='O\\'Brien' AND region IN ('East', 'West'))
		GROUP BY ALL
		
		
		ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery with filters — fabric > routes column-bound filter predicates into the WHERE clause 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 WHERE (category='O''Brien' AND region IN ('East', 'West'))
 GROUP BY category
 
 
 ORDER BY category desc OFFSET 0 ROWS FETCH NEXT 100 ROWS ONLY"
`;

exports[`generateSQLQuery with filters — motherduck > routes column-bound filter predicates into the WHERE clause 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 WHERE (category='O''Brien' AND region IN ('East', 'West'))
 GROUP BY ALL
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery with filters — postgres > routes column-bound filter predicates into the WHERE clause 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 WHERE (category='O''Brien' AND region IN ('East', 'West'))
 GROUP BY category
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery with filters — snowflake > routes column-bound filter predicates into the WHERE clause 1`] = `
"SELECT category AS "CATEGORY", sum(sales) AS "SUM_SALES"
 FROM orders
 WHERE (category='O\\'Brien' AND region IN ('East', 'West'))
		GROUP BY ALL
		
		
		ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery — bigquery > date-grain dimension 1`] = `
"SELECT category AS \`category\`, DATE_TRUNC(order_date, MONTH) AS \`order_date__month\`, sum(sales) AS \`sum_sales\`
 FROM orders
 
 GROUP BY ALL"
`;

exports[`generateSQLQuery — bigquery > grouped chart 1`] = `
"SELECT category AS \`category\`, sum(sales) AS \`sum_sales\`
 FROM orders
 
 GROUP BY ALL
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery — bigquery > search + pagination 1`] = `
"SELECT * FROM (SELECT category AS \`category\`, sum(sales) AS \`sum_sales\`
 FROM orders
 
 GROUP BY ALL
 
 
 
 LIMIT 2000) AS evidence_paged WHERE (LOWER(CAST(\`category\` AS STRING)) LIKE LOWER('%abc%') OR LOWER(CAST(\`sum_sales\` AS STRING)) LIKE LOWER('%abc%')) LIMIT 10 OFFSET 20"
`;

exports[`generateSQLQuery — bigquery > subtotals table 1`] = `
"SELECT category AS \`category\`, region AS \`region\`, sum(sales) AS \`sum_sales\`, GROUPING(category) AS \`__ev_grouping_category\`, GROUPING(region) AS \`__ev_grouping_region\`, CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END AS \`__ev_subtotal_level\`, CASE
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) IS NULL THEN 'cell_data'
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) = 0 THEN 'row_total'
 ELSE 'row_subtotal'
 END AS \`__ev_render_type\`
 FROM orders
 
 GROUP BY GROUPING SETS ((category, region), (category), ())"
`;

exports[`generateSQLQuery — bigquery > week-grain dimension 1`] = `
"SELECT DATE_TRUNC(order_date, WEEK) AS \`order_date__week\`, sum(sales) AS \`sum_sales\`
 FROM orders
 
 GROUP BY ALL"
`;

exports[`generateSQLQuery — clickhouse > date-grain dimension 1`] = `
"SELECT category AS "category", toStartOfMonth(order_date) AS "order_date__month", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY ALL"
`;

exports[`generateSQLQuery — clickhouse > grouped chart 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY ALL
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery — clickhouse > search + pagination 1`] = `
"SELECT * FROM (SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY ALL
 
 
 
 LIMIT 2000) AS evidence_paged WHERE (CAST("category" AS Nullable(String)) ILIKE '%abc%' OR CAST("sum_sales" AS Nullable(String)) ILIKE '%abc%') LIMIT 10 OFFSET 20"
`;

exports[`generateSQLQuery — clickhouse > subtotals table 1`] = `
"SELECT category AS "category", region AS "region", sum(sales) AS "sum_sales", GROUPING(category) AS "__ev_grouping_category", GROUPING(region) AS "__ev_grouping_region", CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END AS "__ev_subtotal_level", CASE
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) IS NULL THEN 'cell_data'
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) = 0 THEN 'row_total'
 ELSE 'row_subtotal'
 END AS "__ev_render_type"
 FROM orders
 
 GROUP BY GROUPING SETS ((category, region), (category), ())"
`;

exports[`generateSQLQuery — clickhouse > week-grain dimension 1`] = `
"SELECT toStartOfWeek(order_date, 0) AS "order_date__week", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY ALL"
`;

exports[`generateSQLQuery — cube > date-grain dimension 1`] = `
"SELECT category AS "category", DATE_TRUNC('month', order_date) AS "order_date__month", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY category, DATE_TRUNC('month', order_date)"
`;

exports[`generateSQLQuery — cube > grouped chart 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY category
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery — cube > search + pagination 1`] = `
"SELECT * FROM (SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY category
 
 
 
 LIMIT 2000) AS evidence_paged WHERE (LOWER(CAST("category" AS TEXT)) LIKE LOWER('%abc%') OR LOWER(CAST("sum_sales" AS TEXT)) LIKE LOWER('%abc%')) LIMIT 10 OFFSET 20"
`;

exports[`generateSQLQuery — cube > subtotals table 1`] = `"ERROR: Subtotals aren't supported on cube connections — remove subtotals=true from this component."`;

exports[`generateSQLQuery — cube > week-grain dimension 1`] = `
"SELECT DATE_TRUNC('week', order_date) AS "order_date__week", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY DATE_TRUNC('week', order_date)"
`;

exports[`generateSQLQuery — databricks > date-grain dimension 1`] = `
"SELECT category AS \`category\`, DATE_TRUNC('MONTH', order_date) AS \`order_date__month\`, sum(sales) AS \`sum_sales\`
 FROM orders
 
 GROUP BY ALL"
`;

exports[`generateSQLQuery — databricks > grouped chart 1`] = `
"SELECT category AS \`category\`, sum(sales) AS \`sum_sales\`
 FROM orders
 
 GROUP BY ALL
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery — databricks > search + pagination 1`] = `
"SELECT * FROM (SELECT category AS \`category\`, sum(sales) AS \`sum_sales\`
 FROM orders
 
 GROUP BY ALL
 
 
 
 LIMIT 2000) AS evidence_paged WHERE (CAST(\`category\` AS STRING) ILIKE '%abc%' OR CAST(\`sum_sales\` AS STRING) ILIKE '%abc%') LIMIT 10 OFFSET 20"
`;

exports[`generateSQLQuery — databricks > subtotals table 1`] = `
"SELECT category AS \`category\`, region AS \`region\`, sum(sales) AS \`sum_sales\`, GROUPING(category) AS \`__ev_grouping_category\`, GROUPING(region) AS \`__ev_grouping_region\`, CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END AS \`__ev_subtotal_level\`, CASE
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) IS NULL THEN 'cell_data'
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) = 0 THEN 'row_total'
 ELSE 'row_subtotal'
 END AS \`__ev_render_type\`
 FROM orders
 
 GROUP BY GROUPING SETS ((category, region), (category), ())"
`;

exports[`generateSQLQuery — databricks > week-grain dimension 1`] = `
"SELECT DATE_TRUNC('WEEK', order_date) AS \`order_date__week\`, sum(sales) AS \`sum_sales\`
 FROM orders
 
 GROUP BY ALL"
`;

exports[`generateSQLQuery — fabric > date-grain dimension 1`] = `
"SELECT category AS "category", DATETRUNC(month, order_date) AS "order_date__month", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY category, DATETRUNC(month, order_date)"
`;

exports[`generateSQLQuery — fabric > grouped chart 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY category
 
 
 ORDER BY category desc OFFSET 0 ROWS FETCH NEXT 100 ROWS ONLY"
`;

exports[`generateSQLQuery — fabric > search + pagination 1`] = `
"SELECT * FROM (SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY category
 
 
 
 ORDER BY (SELECT NULL) OFFSET 0 ROWS FETCH NEXT 2000 ROWS ONLY) AS evidence_paged WHERE (LOWER(CAST("category" AS VARCHAR(MAX))) LIKE LOWER('%abc%') OR LOWER(CAST("sum_sales" AS VARCHAR(MAX))) LIKE LOWER('%abc%')) ORDER BY (SELECT NULL) OFFSET 20 ROWS FETCH NEXT 10 ROWS ONLY"
`;

exports[`generateSQLQuery — fabric > subtotals table 1`] = `
"SELECT category AS "category", region AS "region", sum(sales) AS "sum_sales", GROUPING(category) AS "__ev_grouping_category", GROUPING(region) AS "__ev_grouping_region", CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END AS "__ev_subtotal_level", CASE
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) IS NULL THEN 'cell_data'
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) = 0 THEN 'row_total'
 ELSE 'row_subtotal'
 END AS "__ev_render_type"
 FROM orders
 
 GROUP BY GROUPING SETS ((category, region), (category), ())"
`;

exports[`generateSQLQuery — fabric > week-grain dimension 1`] = `
"SELECT DATETRUNC(week, order_date) AS "order_date__week", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY DATETRUNC(week, order_date)"
`;

exports[`generateSQLQuery — motherduck > date-grain dimension 1`] = `
"SELECT category AS "category", DATE_TRUNC('month', order_date) AS "order_date__month", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY ALL"
`;

exports[`generateSQLQuery — motherduck > grouped chart 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY ALL
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery — motherduck > search + pagination 1`] = `
"SELECT * FROM (SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY ALL
 
 
 
 LIMIT 2000) AS evidence_paged WHERE (CAST("category" AS VARCHAR) ILIKE '%abc%' OR CAST("sum_sales" AS VARCHAR) ILIKE '%abc%') LIMIT 10 OFFSET 20"
`;

exports[`generateSQLQuery — motherduck > subtotals table 1`] = `
"SELECT category AS "category", region AS "region", sum(sales) AS "sum_sales", GROUPING(category) AS "__ev_grouping_category", GROUPING(region) AS "__ev_grouping_region", CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END AS "__ev_subtotal_level", CASE
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) IS NULL THEN 'cell_data'
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) = 0 THEN 'row_total'
 ELSE 'row_subtotal'
 END AS "__ev_render_type"
 FROM orders
 
 GROUP BY GROUPING SETS ((category, region), (category), ())"
`;

exports[`generateSQLQuery — motherduck > week-grain dimension 1`] = `
"SELECT DATE_TRUNC('week', order_date) AS "order_date__week", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY ALL"
`;

exports[`generateSQLQuery — postgres > date-grain dimension 1`] = `
"SELECT category AS "category", DATE_TRUNC('month', order_date) AS "order_date__month", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY category, DATE_TRUNC('month', order_date)"
`;

exports[`generateSQLQuery — postgres > grouped chart 1`] = `
"SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY category
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery — postgres > search + pagination 1`] = `
"SELECT * FROM (SELECT category AS "category", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY category
 
 
 
 LIMIT 2000) AS evidence_paged WHERE (CAST("category" AS TEXT) ILIKE '%abc%' OR CAST("sum_sales" AS TEXT) ILIKE '%abc%') LIMIT 10 OFFSET 20"
`;

exports[`generateSQLQuery — postgres > subtotals table 1`] = `
"SELECT category AS "category", region AS "region", sum(sales) AS "sum_sales", GROUPING(category) AS "__ev_grouping_category", GROUPING(region) AS "__ev_grouping_region", CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END AS "__ev_subtotal_level", CASE
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) IS NULL THEN 'cell_data'
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) = 0 THEN 'row_total'
 ELSE 'row_subtotal'
 END AS "__ev_render_type"
 FROM orders
 
 GROUP BY GROUPING SETS ((category, region), (category), ())"
`;

exports[`generateSQLQuery — postgres > week-grain dimension 1`] = `
"SELECT (DATE_TRUNC('week', order_date + INTERVAL '1 day') - INTERVAL '1 day') AS "order_date__week", sum(sales) AS "sum_sales"
 FROM orders
 
 GROUP BY (DATE_TRUNC('week', order_date + INTERVAL '1 day') - INTERVAL '1 day')"
`;

exports[`generateSQLQuery — snowflake > date-grain dimension 1`] = `
"SELECT category AS "CATEGORY", DATE_TRUNC('MONTH', order_date) AS "ORDER_DATE__MONTH", sum(sales) AS "SUM_SALES"
 FROM orders
 
 GROUP BY ALL"
`;

exports[`generateSQLQuery — snowflake > grouped chart 1`] = `
"SELECT category AS "CATEGORY", sum(sales) AS "SUM_SALES"
 FROM orders
 
 GROUP BY ALL
 
 
 ORDER BY category desc LIMIT 100"
`;

exports[`generateSQLQuery — snowflake > search + pagination 1`] = `
"SELECT * FROM (SELECT category AS "CATEGORY", sum(sales) AS "SUM_SALES"
 FROM orders
 
 GROUP BY ALL
 
 
 
 LIMIT 2000) AS evidence_paged WHERE (CAST("CATEGORY" AS VARCHAR) ILIKE '%abc%' OR CAST("SUM_SALES" AS VARCHAR) ILIKE '%abc%') LIMIT 10 OFFSET 20"
`;

exports[`generateSQLQuery — snowflake > subtotals table 1`] = `
"SELECT category AS "CATEGORY", region AS "REGION", sum(sales) AS "SUM_SALES", GROUPING(category) AS "__ev_grouping_CATEGORY", GROUPING(region) AS "__ev_grouping_REGION", CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END AS "__ev_subtotal_level", CASE
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) IS NULL THEN 'cell_data'
 WHEN (CASE WHEN GROUPING(category) + GROUPING(region) = 2 AND 0 = 0 THEN 0 WHEN GROUPING(category) = 0 AND GROUPING(region) = 1 THEN 1 WHEN GROUPING(category) = 1 AND GROUPING(region) = 1 THEN 0 ELSE NULL END) = 0 THEN 'row_total'
 ELSE 'row_subtotal'
 END AS "__ev_render_type"
 FROM orders
 
 GROUP BY GROUPING SETS ((category, region), (category), ())"
`;

exports[`generateSQLQuery — snowflake > week-grain dimension 1`] = `
"SELECT DATE_TRUNC('WEEK', order_date) AS "ORDER_DATE__WEEK", sum(sales) AS "SUM_SALES"
 FROM orders
 
 GROUP BY ALL"
`;
